--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
 .App{
   font-family: 'Poppins', sans-serif;
 }
+/*Home */
 .container-1{
   background-color: #EFBCD5;
 }
@@ -23,4 +24,28 @@
 .text{
   padding-left: 3rem;
   padding-top: 5rem;
+}
+/*page2 */
+.container2{
+  padding-left: 3rem;
+  padding-right: 3rem;
+  padding-top: 5rem;
+}
+.pg2{
+  font-weight: 800;
+  font-size: 3rem;
+  padding-left: 33.75rem;
+  padding-bottom: 1.5rem;
+}
+.midas{
+  background: #121213;
+  color: #fff;
+}
+.gitimages{
+  height: 50vh;
+  border-radius: 0.3rem;
+  padding-top: 1.5rem;
+}
+.gitbtn{
+  margin-bottom: 3rem;
 }
