--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,16 @@
 /*Home */
 .container-1{
   background-color: #EFBCD5;
+  padding-left: 3rem;
+  padding-right: 3rem;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  
 }
 .female{
-  height:85vh;
+  height:70vh;
+  border-radius: 0.5rem;
+  
 }
 .her{
   font-weight: bold;
@@ -30,6 +37,8 @@
   padding-left: 3rem;
   padding-right: 3rem;
   padding-top: 5rem;
+  background: #121213;
+  color: #fff;
 }
 .pg2{
   font-weight: 800;
@@ -37,15 +46,61 @@
   padding-left: 33.75rem;
   padding-bottom: 1.5rem;
 }
-.midas{
-  background: #121213;
-  color: #fff;
-}
+
 .gitimages{
   height: 50vh;
-  border-radius: 0.3rem;
+  border-radius: 0.5rem;
   padding-top: 1.5rem;
 }
 .gitbtn{
   margin-bottom: 3rem;
+}
+
+/*page3*/
+.container3{
+  background-color: #EFBCD5;
+  padding-left: 3rem;
+  padding-right: 3rem;
+  padding-top: 5rem;
+}
+.page3img{
+  height: 70vh;
+  border-radius: 0.5rem;
+  padding-bottom: 5rem;
+}
+.txt{
+  font-weight: 800;
+}
+/*page4*/
+.container4{
+  background: #121213;
+  padding-left: 3rem;
+  padding-right: 3rem;
+  padding-top: 5rem;
+}
+.page4img{
+  height: 80vh;
+  border-radius: 0.5rem;
+  padding-bottom: 5rem;
+}
+.cmt{
+  
+  padding-right: 3rem;
+  padding-top: 0.5rem;
+}
+.input{
+  width: 60%;
+  height: 10vh;
+  margin-top: 2rem;
+  margin-right: 5rem;
+  margin-left: 3rem;
+  
+}
+.pg4{
+  color: #fff;
+  font-weight: 800;
+  font-size: 3rem;
+  margin-left: 33.75rem;
+  padding-bottom: 1.5rem;
+  
 }
