--- a/src/App.css
+++ b/src/App.css
@@ -5,18 +5,17 @@
 }
 /*Home */
 .container-1{
-  background-color: #EFBCD5;
+  background: url(https://res.cloudinary.com/dphnzljmv/image/upload/v1623326436/walling-OvLXbURo9Wo-unsplash_ypdcuq.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #fff;
   padding-left: 3rem;
   padding-right: 3rem;
   padding-top: 5rem;
   padding-bottom: 5rem;
   
-}
-.female{
-  height:70vh;
-  border-radius: 0.5rem;
-  
-}
+} 
+
 .her{
   font-weight: bold;
   font-size: 6rem;
@@ -26,7 +25,8 @@
   font-size: 4rem;
 }
 .gt{
-  color:#fff;
+  color:#f5ddd4;
+  
 }
 .text{
   padding-left: 3rem;
@@ -36,9 +36,9 @@
 .container2{
   padding-left: 3rem;
   padding-right: 3rem;
-  padding-top: 5rem;
-  background: #121213;
-  color: #fff;
+  padding-top: 3rem;
+  background: #c4c7b4;
+
 }
 .pg2{
   font-weight: 800;
@@ -49,7 +49,7 @@
 
 .gitimages{
   height: 50vh;
-  border-radius: 0.5rem;
+  width: 100%;
   padding-top: 1.5rem;
 }
 .gitbtn{
@@ -58,7 +58,7 @@
 
 /*page3*/
 .container3{
-  background-color: #EFBCD5;
+  background: #f5ddd4;
   padding-left: 3rem;
   padding-right: 3rem;
   padding-top: 5rem;
@@ -73,18 +73,17 @@
 }
 /*page4*/
 .container4{
-  background: #121213;
+  background: #c4c7b4;
   padding-left: 3rem;
   padding-right: 3rem;
   padding-top: 5rem;
 }
 .page4img{
   height: 80vh;
-  border-radius: 0.5rem;
   padding-bottom: 5rem;
 }
 .cmt{
-  
+ 
   padding-right: 3rem;
   padding-top: 0.5rem;
 }
@@ -97,10 +96,175 @@
   
 }
 .pg4{
-  color: #fff;
   font-weight: 800;
   font-size: 3rem;
   margin-left: 33.75rem;
   padding-bottom: 1.5rem;
   
+}
+@media screen and (max-width:1080px){
+  .container-1{
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    padding-top: 2rem;
+    padding-bottom: 3rem; 
+  }
+  /*page2 */
+.container2{
+  display: flex;
+  flex-direction: column;
+}
+.pg2{
+  font-weight: 600;
+  padding-left: 8rem;
+  padding-bottom: 1.5rem;
+}
+
+.gitimages{
+  height: 32vh;
+  width: 100%;
+  padding-top: 1rem;
+  
+}
+/*page3*/
+.container3{
+  background: #f5ddd4;
+  padding-left: 3rem;
+  padding-right: 3rem;
+  padding-top: 5rem;
+}
+.page3img{
+  height: 50vh;
+  width: 100%;
+  padding-bottom: 5rem;
+}
+/*page4*/
+.input{
+  width: 70%;
+  height: 8vh;
+  margin-top: 2rem;
+  margin-right: 5rem;
+  margin-left: 3rem;
+  
+}
+.pg4{
+  font-weight: 800;
+  font-size: 3rem;
+  margin-left: 15rem;
+  padding-bottom: 1.5rem;
+  
+}
+
+}
+@media screen and (max-width:1024px){
+  .container-1{
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top: 1.5rem;
+    padding-bottom: 2rem; 
+  }
+  /*page2 */
+
+.gitimages{
+  height: 20vh;
+  width: 100%;
+  padding-top: 0.5rem;
+  
+}
+/*page3*/
+.container3{
+  background: #f5ddd4;
+  padding-left: 3rem;
+  padding-right: 3rem;
+  padding-top: 4rem;
+}
+.page3img{
+  height: 30vh;
+  width: 100%;
+  padding-bottom: 5rem;
+}
+/*page4*/
+.input{
+  width: 70%;
+  height: 5vh;
+  margin-top: 2rem;
+  margin-right: 5rem;
+  margin-left: 3rem;
+  
+}
+.pg4{
+  font-weight: 800;
+  font-size: 3rem;
+  margin-left: 15rem;
+  padding-bottom: 1.5rem;
+  
+}
+
+}
+@media screen and (max-width:700px){
+  .container-1{
+    padding-left: 0.25rem;
+    padding-right: 0.4rem;
+    padding-top: 1.5rem;
+    padding-bottom: 5rem; 
+  }
+  .her{
+    font-weight: bold;
+    font-size: 4rem;
+  }
+  .herwork{
+    font-weight: 600;
+    font-size: 3rem;
+  }
+  .text{
+    padding-left: 1.5rem;
+    padding-top: 2.5rem;
+  }
+  
+  /*page2 */
+.container2{
+  display: flex;
+  flex-direction: column;
+}
+.pg2{
+  font-weight: 300;
+  padding-left: 2rem;
+  padding-bottom: 1.5rem;
+}
+
+.gitimages{
+  height: 30vh;
+  width: 100%;
+  padding-top: 1rem;
+  
+}
+/*page3*/
+.container3{
+  background: #f5ddd4;
+  padding-left: 3rem;
+  padding-right: 3rem;
+  padding-top: 5rem;
+}
+.page3img{
+  height: 45vh;
+  width: 100%;
+  padding-bottom: 5rem;
+}
+/*page4*/
+.input{
+  width: 100%;
+  height: 8vh;
+  margin-top: 2rem;
+  margin-right: 5rem;
+  margin-left: 3rem;
+  
+}
+.pg4{
+  font-weight: 600;
+  font-size: 3rem;
+  margin-left: 1rem;
+  padding-bottom: 1.5rem;
+  
+}
+
 }
