--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,7 @@
 .text{
   padding-left: 3rem;
   padding-top: 5rem;
+  padding-bottom: 5rem;
 }
 /*page2 */
 .container2{
@@ -79,7 +80,7 @@
   padding-top: 5rem;
 }
 .page4img{
-  height: 80vh;
+  height: 68vh;
   padding-bottom: 5rem;
 }
 .cmt{
@@ -101,6 +102,10 @@
   margin-left: 33.75rem;
   padding-bottom: 1.5rem;
   
+}
+.span{
+  color: red;
+  font-size: 12px;
 }
 @media screen and (max-width:1080px){
   .container-1{
@@ -154,6 +159,10 @@
   padding-bottom: 1.5rem;
   
 }
+.page4img{
+  display: none;
+ 
+}
 
 }
 @media screen and (max-width:1024px){
@@ -198,6 +207,9 @@
   margin-left: 15rem;
   padding-bottom: 1.5rem;
   
+}
+.page4img{
+  display: none;
 }
 
 }
@@ -255,7 +267,7 @@
   width: 100%;
   height: 8vh;
   margin-top: 2rem;
-  margin-right: 5rem;
+  margin-right: 3rem;
   margin-left: 3rem;
   
 }
@@ -265,6 +277,9 @@
   margin-left: 1rem;
   padding-bottom: 1.5rem;
   
+}
+.page4img{
+  display: none;
 }
 
 }
